# kirby-node

./: AGENTS.md  Cargo.toml  README.md  flake.nix  kirby.toml.example  rust-toolchain.toml
crates/kirby-custody/: .gitignore  BUILD-LOG.md  Cargo.toml  reproduce.sh
crates/kirby-custody/examples/: verify_nostr_event.rs
crates/kirby-custody/src/: chain.rs  coordinator.rs  cosign_net.rs  guardian.rs  lib.rs  persist.rs  reshare.rs  seam.rs  spend.rs
crates/kirby-ebpf/: Cargo.toml  rust-toolchain.toml
crates/kirby-ebpf/.cargo/: config.toml
crates/kirby-ebpf/src/: main.rs
crates/kirby-genome/: Cargo.toml
crates/kirby-genome/src/: capable.rs  fingerprint.rs  main.rs  memory.rs  metabolism.rs
crates/kirby-node/: Cargo.toml  build.rs
crates/kirby-node/src/: app_checkpoint_run.rs  boot.rs  brokered_run.rs  config.rs  egress_run.rs  firecracker.rs  fleet_reconcile.rs  fleet_supervisor.rs  frost_identity.rs  full_loop_run.rs  gateway.rs  idempotent_run.rs  keyset_provisioning.rs  lib.rs  main.rs  meter.rs  meter_egress.rs  metered_run.rs  mint_rig.rs  nerve.rs  network.rs  nosplitbrain_run.rs  prereqs.rs  quorum_signer.rs  raft_lease.rs  rail.rs  relay_lease.rs  remote_holder.rs  run_agent.rs  sandbox.rs  snapshot_run.rs  spawn.rs  treasury.rs  vz.rs  vz_helper.swift
crates/kirby-node/tests/: app_checkpoint_resume.rs  brokered_act.rs  capable_loop.rs  egress_lockdown.rs  entropy_resume.rs  fleet_host_s2.rs  frost_quorum_publish.rs  full_loop.rs  genome_boot.rs  idempotent_resume.rs  metering_halt.rs  metering_halt_vz.rs  no_split_brain.rs  relay_lease.rs  run_agent.rs  snapshot_resume.rs  treasury_gateway.rs  vz_egress.rs
crates/kirby-proto/: Cargo.toml  build.rs
crates/kirby-proto/proto/: node_gateway.proto
crates/kirby-proto/src/: lib.rs
docs/: build-spec.md  cross-platform-sandbox.md  mac-build-and-run.md  test-coverage-gap-report-20260624.md  vz-app-checkpoint-resume.md  vz-build-sequence.md  vz-macos-backend-sketch.md
nix/: genome-image-aarch64.nix  genome-image.nix  guest-kernel-aarch64.nix  guest-kernel.nix  relay.nix
scripts/: nerve-presence-test.sh
